Fix wrapping and positioning details.

--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ a {
     align-items: center;
     justify-content: space-between;
     margin-bottom: 30px;
+    flex-wrap: wrap;
 }
 
 .logo {
@@ -62,12 +63,13 @@ a {
     align-items: center;
     gap: 16px;
     color: #E5E7EB;
+    flex-wrap: wrap;
 }
 
 .secondary-header {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
     text-align: start;
     font-size: 18px;
 }
@@ -92,7 +94,7 @@ a {
     font-size: 36px;
     font-weight: bolder;
     margin-top: 25px;
-    margin-bottom: 25px;
+    margin-bottom: 10px;
 }
 
 .cards-container {
@@ -101,11 +103,13 @@ a {
     align-items: center;
     margin-bottom: 80px;
     column-gap: 40px;
+    flex-wrap: wrap;
 }
 
 .card {
     width: 220px;
     font-size: 15px;
+    margin-top: 15px;
 }
 
 .card-image {
